# ChangeLog for dev-ruby/ruby-openid
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-openid/ChangeLog,v 1.7 2009/04/24 07:09:11 graaff Exp $

  24 Apr 2009; Hans de Graaff <graaff@gentoo.org> -ruby-openid-2.1.2.ebuild:
  Remove old version.

*ruby-openid-2.1.4 (03 Mar 2009)

  03 Mar 2009; Hans de Graaff <graaff@gentoo.org> +ruby-openid-2.1.4.ebuild:
  Version bump: improve compatibility with OpenID 2 specs.

  03 Mar 2009; Hans de Graaff <graaff@gentoo.org> -ruby-openid-1.1.4.ebuild,
  -ruby-openid-2.0.3.ebuild, -ruby-openid-2.0.4.ebuild:
  Remove old versions.

*ruby-openid-2.1.2 (20 Dec 2008)

  20 Dec 2008; Hans de Graaff <graaff@gentoo.org> +ruby-openid-2.1.2.ebuild:
  Version bump

*ruby-openid-2.0.4 (15 Apr 2008)

  15 Apr 2008; Hans de Graaff <graaff@gentoo.org> +ruby-openid-2.0.4.ebuild:
  Version bump, bug #217822

*ruby-openid-2.0.3 (26 Jan 2008)

  26 Jan 2008; Hans de Graaff <graaff@gentoo.org> +ruby-openid-2.0.3.ebuild:
  Version bump: note API changes compared to ruby-openid-1.x.x

*ruby-openid-1.1.4 (31 Mar 2007)

  31 Mar 2007; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +ruby-openid-1.1.4.ebuild:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
