@@ -1,0 +1,15 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-openid/Attic/ruby-openid-2.1.6.ebuild,v 1.1 2009/05/10 06:23:00 graaff Exp $
+
+inherit gems
+
+DESCRIPTION="A robust library for verifying and serving OpenID identities"
+HOMEPAGE="http://ruby-openid.rubyforge.org/"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~ppc ~amd64 ~x86"
+IUSE=""
+
+USE_RUBY="ruby18"
